--- a/.github/workflows/build-expo.yaml
+++ b/.github/workflows/build-expo.yaml
@@ -23,7 +23,7 @@ jobs:
           token: ${{ secrets.EXPO_TOKEN }}
 
       - name: 📦 Install dependencies
-        run: npm install
+        run: npm ci
 
       - name: 🚀 Build preview app
         run: eas build --profile preview --non-interactive
