--- a/.github/workflows/build-expo.yaml
+++ b/.github/workflows/build-expo.yaml
@@ -1,38 +1,39 @@
-
 on:
   push:
     branches:
       - main
+
 jobs:
-  build:
+  update:
+    name: EAS Update
     runs-on: ubuntu-latest
     steps:
-      - name: 🏗 Setup repo
-        uses: actions/checkout@v4
-        with:
-          # We need to fetch all history and branches for versioning
-          fetch-depth: 0
-          # A personal access token is required to push commits back
-          token: ${{ secrets.PAT }}
+      - name: Check for EXPO_TOKEN
+        run: |
+          if [ -z "${{ secrets.EXPO_TOKEN }}" ]; then
+            echo "You must provide an EXPO_TOKEN secret linked to this project's Expo account in this repo's secrets. Learn more: https://docs.expo.dev/eas-update/github-actions"
+            exit 1
+          fi
 
-      - name: 🏗 Setup Node
+      - name: Checkout repository
+        uses: actions/checkout@v4
+
+      - name: Setup Node
         uses: actions/setup-node@v4
         with:
           node-version: 18.x
-          cache: npm
+          cache: yarn
 
-      - name: 🏗 Setup EAS
+      - name: Setup EAS
         uses: expo/expo-github-action@v8
         with:
           eas-version: latest
           token: ${{ secrets.EXPO_TOKEN }}
 
-      - name: 📦 Install dependencies
-        run: npm ci
+      - name: Install dependencies
+        run: yarn install
 
-      - name: ⬆️ Bump version
-        # This step runs only if the commit message does not already contain "chore: bump version"
-        # to prevent an infinite loop of version bumps.
+      - name: Bump version
         if: "!contains(github.event.head_commit.message, 'chore: bump version')"
         run: |
           git config --global user.name "github-actions[bot]"
@@ -62,5 +63,7 @@ jobs:
           git push
           git push --tags
 
-      - name: 🚀 Build preview app
-        run: eas build --profile preview --non-interactive
+      - name: Create preview
+        uses: expo/expo-github-action/preview@v8
+        with:
+          command: eas update --auto
