--- a/.github/workflows/build-expo.yaml
+++ b/.github/workflows/build-expo.yaml
@@ -22,7 +22,7 @@ jobs:
         uses: actions/setup-node@v4
         with:
           node-version: 18.x
-          cache: yarn
+          cache: npm
 
       - name: Setup EAS
         uses: expo/expo-github-action@v8
@@ -31,7 +31,7 @@ jobs:
           token: ${{ secrets.EXPO_TOKEN }}
 
       - name: Install dependencies
-        run: yarn install
+        run: npm ci
 
       - name: Bump version
         if: "!contains(github.event.head_commit.message, 'chore: bump version')"
